src-ken&y/objects/Stock_Movement_Rule__c.object
<CustomObject>
    <customHelpPage>HelpStockpoints</customHelpPage>
    <description>Defines the rules to use to decide the picking and the putaway location throughout the system.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this stock movement rule is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Class for the rule.</description>
        <inlineHelpText>In addition to specifying the company and facility, you can further specify the criteria by selecting an item class. If blank, the rule applies to all classes.</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company for the rule.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Package_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Package Class</label>
        <referenceTo>Package_Class__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer for the rule.</description>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Facility for the rule.</description>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility must belong to the company specified !</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item for the rule.</description>
        <inlineHelpText>In addition to specifying the company and facility, you can further specify the criteria by selecting an item. If blank, the rule applies to all items.</inlineHelpText>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_List__c</fullName>
        <description>This field is used to store the json string of the list of location ids.</description>
        <inlineHelpText>Used to store json of list of location ids. Do not add to the layout.</inlineHelpText>
        <label>Location List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location to be used in pick/putaway.</description>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location must belong to the company and facility specified !</errorMessage>
            <filterItems>
                <field>Location__c.Facility__r.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Stock Movement Rules</relationshipLabel>
        <relationshipName>Stock_Movement_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority order for the rules.</description>
        <inlineHelpText>Indicates the sequence in which Kenandy processes a set of rules.</inlineHelpText>
        <label>Priority</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <description>the type of rule.</description>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pick</fullName>
                </value>
                <value>
                    <fullName>Putaway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Temporary use field for the location list visualforce section. Please do not add to layout!</description>
        <inlineHelpText>Temporary use field for the location list visualforce section. Please do not add to layout!</inlineHelpText>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Document__c</fullName>
        <description>Source document for the rule.</description>
        <inlineHelpText>Options include Purchase Orders, Transfer Orders.</inlineHelpText>
        <label>Source Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Transfer Order</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Receiving Document</fullName>
                </value>
                <value>
                    <fullName>Directed Putaway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Stock Movement Rules (Source Location)</relationshipLabel>
        <relationshipName>Stock_Movement_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Priority-Rule Type-Source Document combination</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Stock Movement Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Facility__c</columns>
        <columns>Class__c</columns>
        <columns>Item__c</columns>
        <columns>Customer__c</columns>
        <columns>Location__c</columns>
        <columns>Priority__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Source_Document__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stock Movement Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Movement Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Customer_Only_For_Sales_Order_type</fullName>
        <active>true</active>
        <description>Customer can be specified only for source document of type Sales Order</description>
        <errorConditionFormula>AND( NOT(ISPICKVAL(Source_Document__c,&apos;Sales Order&apos;)), NOT(OR(ISNULL( Customer__c ), ISBLANK(Customer__c))))</errorConditionFormula>
        <errorMessage>Customer can be specified only for rules with Source Document as &apos;Sales Order&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_Cannot_Be_Empty</fullName>
        <active>true</active>
        <description>Validate and do not allow anything less than 0</description>
        <errorConditionFormula>Priority__c &lt; 0</errorConditionFormula>
        <errorMessage>Please enter a valid Priority. Priority cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>